--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "sweetalert": "^2.1.2",
     "swr": "^2.3.3",
     "tailwindcss": "^4.1.7"
   },
